--- a/db2spring-generator/pom.xml
+++ b/db2spring-generator/pom.xml
@@ -11,7 +11,7 @@
         <relativePath>../pom.xml</relativePath>
     </parent>
 
-    <artifactId>db2spring-cli</artifactId>
+    <artifactId>db2spring-generator</artifactId>
 
     <properties>
         <maven.compiler.source>17</maven.compiler.source>
@@ -74,7 +74,7 @@
                         </goals>
                         <configuration>
                             <createDependencyReducedPom>false</createDependencyReducedPom>
-                            <finalName>${project.artifactId}-${project.version}</finalName>
+                            <finalName>${project.artifactId}</finalName>
                             <shadedArtifactAttached>false</shadedArtifactAttached> <!-- 👈 ensures shaded jar replaces main -->
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
